<resources>
    <string name="app_name">InventoryApp1</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="empty_view_title_text">It\'s a bit lonely here</string>
    <string name="empty_view_subtitle_text">Get Started by adding a book</string>
    <string name="insert_dummy_book">Insert Dummy Book</string>
    <string name="delete_all_books">Delete all Books</string>
    <string name="delete_all_books_dialog_msg">Delete all Books?\nAre you sure!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_book">Add a Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="error_deleting_book">Error Deleting Book</string>
    <string name="book_deleted">Book Deleted</string>
    <string name="delete_this_book">Delete this Book?</string>
    <string name="error_saving_book">Error with saving book</string>
    <string name="book_saved">Book Saved</string>
    <string name="update_failed">Update failed</string>
    <string name="update_successful">Update Successful</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="sell">Sell</string>
    <string name="book">Book</string>
    <string name="price">Price</string>
    <string name="in_stock">In stock</string>
    <string name="language">Language</string>
    <string name="book_name">BookOpedia</string>
    <string name="book_not_in_stock">Book not in Stock</string>
    <string name="wing_of_fire">Wings Of Fire</string>
    <string name="apj_abdul_kalam">A.P.J Abdul Kalam</string>
    <string name="english">English</string>
    <string name="rows_deleted_from_db">rows deleted from the books database</string>
    <string name="negative_quantity">Books quantity cannot be negative</string>
    <string name="error_selling_book">Error Selling Book</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier">Supplier</string>
    <string name="arihant">Arihant</string>
    <string name="empty_details">Please! Fill All Details</string>
    <string name="unknown_supplier">Unknown Supplier</string>
</resources>
