<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".BookDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/book"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_book_name"
                android:hint="Name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/price"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/detail_book_price"
                android:layout_width="wrap_content"
                android:hint="0"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_price"
                android:text="$"
                style="@style/EditorUnitsStyle"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/in_stock"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/increment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/detail_book_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="1"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <Button
                android:id="@+id/decrement_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <TextView
                android:id="@+id/detail_supplier_name"
                android:hint="Supplier Name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_supplier_number"
                android:layout_width="wrap_content"
                android:hint="Supplier Number"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
                <Button
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/ic_call"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
